# redcrawl

./: .env.example  README.md  main.py  pyproject.toml
redcrawl/: crawl.py
redcrawl/api/: redapi.py
